--- a/MediaEnumerator/app/src/main/res/values/strings.xml
+++ b/MediaEnumerator/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="video">Video</string>
+    <string name="audio">Audio</string>
+    <string name="image">Image</string>
 </resources>
